@@ -6,6 +6,6 @@ recursive-include share/ *.ui *.in *.png *.svg
 recursive-include share/extra *.py
 recursive-include share/history *.html *.css *.js
 recursive-include po/ *.in *.po
-recursive-include help/ *.in *.py *.po *.png *.xcf
+recursive-include help/ *.in *.py *.po *.png
 recursive-include help/C *.xml
 recursive-include lib/extra *.py
