@@ -12,18 +12,19 @@ from ...utils.config import GConf
 
 class Texture(GtkClutter.Texture):
 
-    def __init__(self, stage):
+    def __init__(self, stage=None):
         super(Texture, self).__init__()
         super(Texture, self).hide() # FIXME?
 
         self.set_reactive(True)
         self.connect('button-press-event', self._on_button_press_cb)
-        stage.add_actor(self)
+        if stage:
+            stage.add(self)
 
         self._set_animation_timeline()
 
     def change(self, pixbuf, x, y):
-        self._set_texture_from_pixbuf(self, pixbuf)
+        self._set_texture_from_pixbuf(pixbuf)
         self.set_position(x, y)
 
     def _set_animation_timeline(self):
@@ -32,15 +33,15 @@ class Texture(GtkClutter.Texture):
     def _on_button_press_cb(self, actor, event):
         pass
 
-    def _set_texture_from_pixbuf(self, texture, pixbuf):
+    def _set_texture_from_pixbuf(self, pixbuf):
         bpp = 4 if pixbuf.props.has_alpha else 3
 
         # FIXME
         tmp_file = '/tmp/a.jpg'
         pixbuf.savev(tmp_file, 'jpeg', [], [])
-        texture.set_from_file(tmp_file)
+        self.set_from_file(tmp_file)
 
-#         texture.set_from_rgb_data(
+#         self.set_from_rgb_data(
 #             pixbuf.get_pixels(),
 #             pixbuf.props.has_alpha,
 #             pixbuf.props.width,
