@@ -1,3 +1,12 @@
+2011-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* image/actor/map.py: Added support for Map on image with
+	  libchamplain.
+
+2011-11-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* NEWS: 1.4.1 release.
+
 2011-11-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* utils/config.py: Use old gconf package. New one has bugs.
@@ -16,6 +25,7 @@
 	  Facebook album selection (issue #98).
 
 2011-11-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
 	* fr.po: Added French translation.  Thanks MathieuMD!
 
 2011-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
